--- a/setup/info.tex
+++ b/setup/info.tex
@@ -10,7 +10,7 @@
 % 论文中文标题
 % 请注意：标题控制在36个汉字以内），其中用 \\ 实现标题换行，单行不得超过18个汉字。
 % 		  \underline命令用于实现标题的下划线，请把标题输入在\underline命令的的{}中
-\cTitle{\underline{面向无人机视频传输的新型传输层} \\ \underline{协议设计与实现}}
+\cTitle{\underline{面向无人机视频传输的增强传输} \\ \underline{技术研究与实现}}
 
 % 论文英文标题（72个字符以内，包含空格）
 \eTitle{Design and Implementation of New Transport Layer Protocol for Wireless Networks}
