--- a/setup/info.tex
+++ b/setup/info.tex
@@ -13,7 +13,7 @@
 \cTitle{\underline{面向无人机视频传输的增强传输} \\ \underline{技术研究与实现}}
 
 % 论文英文标题（72个字符以内，包含空格）
-\eTitle{Design and Implementation of New Transport Layer Protocol for Wireless Networks}
+\eTitle{Research and Implementation of Enhanced Transmission Technology for UAV Video Transmission}
 
 
 % 国内图书分类号
