--- a/content/chap01.tex
+++ b/content/chap01.tex
@@ -4,8 +4,10 @@
 
 \chapter{绪论}
 \par
-本章首先介绍传输层协议在现今互联网的广泛应用，对TCP-Reno协议进行了粗略的描述，重点指出了TCP在无线网络环境下的劣势。阐述了改进TCP协议的必要性，对国内外学者在改进无线网络环境下TCP性能的研究现状进行分析和比较。最后介绍了本论文的工作及论文的相关安排。
+本章首先介绍无人机视频传输的广泛应用及其现有的技术方案，重点分析基于TCP协议的无人机视频传输所面临的问题，指出问题核心乃是TCP协议本身的设计。接着，对TCP-Reno协议进行了粗略的描述，重点指出了TCP协议的拥塞控制在lossy信道下的劣势及对无人机视频传输的影响。阐述了改进TCP协议的必要性，对国内外学者在改进lossy信道环境下TCP性能的研究现状进行分析和比较。最后介绍了本论文的工作及论文的相关安排。
 \section{论文的研究背景和意义}
+\par
+近几年，得益于集成电路技术、通讯技术的飞速发展，无人机开始进入民用市场，其成为一种大众消费品的趋势越来越明显。以大疆为代表的国内无人机产业快速发展并占据世界领先地位。无人机航拍也逐渐成为了普通人都可以应用的一项技术。无人机航拍技术方案主要分为两类：第一种是类似DJI Lightbridge的专有数据链技术，包含数字图传和模拟图传，其优点是传输时延小和单向广播；第二种是WIFI图传技术，其缺点是传输时延比较大，传输距离也受限，容易受到无线链路中的各种干扰。WIFI机制下，每个数据包必须完整无误传输，一旦数据错误或有丢失，就需要重新发送，一般都是基于TCP协议来进行图传。但是WIFI图传价格低廉，无需专门的操控设备，在低价民用市场仍然具有一定市场份额。
 \par
 互联网为人们提供了一个快速、实时交换信息的平台。传输层协议（TCP） 和网络层协议（IP） 在设计
 之初就被紧密地联系在一起，定义了不同终端之间的通信规则，也是在互联网中数据传输方面应用最为广泛的协议族。从主干网到各种异构网络，由于简单、可靠，TCP/IP的组合主导了今天的通信。从交互式的应用，如Telnet和HTTP，到类似FTP协议这样的大块数据传输，TCP已经成为了事实上的标准。TCP最初是针对有线网络设计的。在有线网络中，很少出现比特传输错误，拥塞是导致丢包的主要原因。每个TCP报文都有一个序号，只有接收端按序收到正确的报文，发送端才会收到接收端回复的相应报文的确认（ Acknowledge，ACK ）。另一方面，丢包或者乱序包表明传输出错。基于滑动窗口和加法增乘法减（Additive  increase multiplicative decrease，AIMD）\cite{Chiu1989Analysis}，TCP实现了流控和拥塞控制算法来解决这个问题。AIMD体现了TCP协议在带宽利用和公平性方面的有效性
