--- a/preface/cabstract.tex
+++ b/preface/cabstract.tex
@@ -13,7 +13,7 @@
 	\par
 	然而对于无人机来说，由于天气、障碍物、多径干扰等各种因素，TCP丢包率比在有线网络中大得多，且丢包多由传输错误导致。传统TCP无法鉴别拥塞丢包和非拥塞丢包，不分区别地频繁启动拥塞控制算法，降低数据发送速率，将导致TCP无法充分利用可用带宽，进而影响无人机视频传输的速度。网络编码的出现对于解决这一问题给出了一个思路。通过在发送端冗余编码，可以掩盖链路中出现的随机丢包，让TCP只会检测到拥塞丢包，从而提高数据传输的速度。
 	\par
-	本文分析了基于TCP协议的无人机视频传输所面临的问题，并指出问题核心是TCP协议在面对无线网络环境时的低效。对近些年来改善无线网络中TCP性能的相关工作进行了梳理。
+	本文分析了基于TCP协议的无人机视频传输所面临的问题，并指出问题核心是TCP协议在面对lossy信道时的低效。对近些年来改善lossy信道中TCP性能的相关工作进行了梳理。
 	介绍了网络编码原理，尤其是随机线性网络编码。对于batch-coding和pipeline-coding进行了比较，分析了其应用场景和优缺点。
 	在以上基础上，结合TCP协议特点，如滑动窗口，设计实现了流水线编码TCP协议，并将其移植入嵌入式设备。在模拟丢包网络中，对流水线编码TCP进行性能测试，与TCP-Reno协议进行性能对比，分析影响其性能的关键因素。在了解流水线编码TCP协议不足的情形下，对其做了进一步改进。提出了前向重传机制以应对一个RTO内的突发丢包；提出了一种新的自适应冗余度算法以应对网络的变化；对冗余包的发送时机给出改进以降低平均解码时延；设计补偿重传机制以降低解码端解码矩阵维度和减小解码时延；改进编码系数的设定以降低首部开销。最后，本文搭建了无人机视频传输实验平台，验证改进后的编码TCP协议对无人机视频传输数据吞吐率的提高。
 	\par
