准备向无人机连上物联网靠拢

--- a/content/chap01.tex
+++ b/content/chap01.tex
@@ -4,62 +4,263 @@
 
 \chapter{绪论}
 \par
-本章首先介绍无人机视频传输的广泛应用及其现有的技术方案，重点分析基于TCP协议的无人机视频传输所面临的问题，指出问题核心乃是TCP协议本身的设计。接着，对TCP-Reno协议进行了粗略的描述，重点指出了TCP协议的拥塞控制在lossy信道下的劣势及对无人机视频传输的影响。阐述了改进TCP协议的必要性，对国内外学者在改进lossy信道环境下TCP性能的研究现状进行分析和比较。最后介绍了本论文的工作及论文的相关安排。
+本章首先介绍无人机视频传输的广泛应用及其现有的技术方案，
+分析各自的优缺点。
+对WIFI机制下的无人机视频传输所依赖的TCP协议进行了粗略的描述。
+分析基于TCP协议的无人机视频传输所面临的问题，
+指出问题核心乃是TCP协议本身的丢包模型设计。
+重点指出了TCP协议的拥塞控制在lossy信道下的劣势及对无人机视频传输的影响。
+阐述了改进TCP协议的必要性，
+对国内外学者在改进lossy信道环境下TCP性能的研究现状进行分析和比较。
+最后介绍了本论文的工作及论文的相关安排。
 \section{论文的研究背景和意义}
 \par
-近几年，得益于集成电路技术、通讯技术的飞速发展，无人机开始进入民用市场，其成为一种大众消费品的趋势越来越明显。以大疆为代表的国内无人机产业快速发展并占据世界领先地位。无人机航拍也逐渐成为了普通人都可以应用的一项技术。无人机航拍技术方案主要分为两类：第一种是类似DJI Lightbridge的专有数据链技术，包含数字图传和模拟图传，其优点是传输时延小和单向广播；第二种是WIFI图传技术，其缺点是传输时延比较大，传输距离也受限，容易受到无线链路中的各种干扰。WIFI机制下，每个数据包必须完整无误传输，一旦数据错误或有丢失，就需要重新发送，一般都是基于TCP协议来进行图传。但是WIFI图传价格低廉，无需专门的操控设备，在低价民用市场仍然具有一定市场份额。
+近几年，
+得益于集成电路技术、通讯技术的飞速发展，
+无人机开始进入民用市场，
+其成为一种大众消费品的趋势越来越明显。
+以大疆为代表的国内无人机产业快速发展并占据世界领先地位。
+无人机航拍也逐渐成为了普通人都可以应用的一项技术。
+无人机航拍技术方案主要分为两类：
+第一种是类似DJI Lightbridge\footnote{关于DJI Lightbridge，参见\url{http://www.dji.com/cn/dji-lightbridge}}的专有数据链技术，
+包含数字图传和模拟图传，
+其优点是传输时延小和单向广播；
+第二种是基于现有TCP/IP网络协议体系下的视频传输技术，如WIFI图传。
+其缺点是传输时延比较大，
+容易受到无线链路中的各种干扰。
+WIFI图传虽然性能一般，
+但是价格低廉，
+无需专门的操控设备，
+在低价民用市场仍然具有一定市场份额。
 \par
-互联网为人们提供了一个快速、实时交换信息的平台。传输层协议（TCP） 和网络层协议（IP） 在设计
-之初就被紧密地联系在一起，定义了不同终端之间的通信规则，也是在互联网中数据传输方面应用最为广泛的协议族。从主干网到各种异构网络，由于简单、可靠，TCP/IP的组合主导了今天的通信。从交互式的应用，如Telnet和HTTP，到类似FTP协议这样的大块数据传输，TCP已经成为了事实上的标准。TCP最初是针对有线网络设计的。在有线网络中，很少出现比特传输错误，拥塞是导致丢包的主要原因。每个TCP报文都有一个序号，只有接收端按序收到正确的报文，发送端才会收到接收端回复的相应报文的确认（ Acknowledge，ACK ）。另一方面，丢包或者乱序包表明传输出错。基于滑动窗口和加法增乘法减（Additive  increase multiplicative decrease，AIMD）\cite{Chiu1989Analysis}，TCP实现了流控和拥塞控制算法来解决这个问题。AIMD体现了TCP协议在带宽利用和公平性方面的有效性
+WIFI机制下，
+每个数据包必须完整无误传输，
+一旦数据错误或有丢失，
+就需要重新发送，
+一般都是基于TCP协议来进行图传。
+在TCP协议中，
+每个TCP报文都有一个序号，
+只有接收端按序收到正确的报文，
+发送端才会收到接收端回复的相应报文的确认（ Acknowledgement，ACK ）。
+另一方面，
+丢包或者乱序包表明传输出错。
+ACK机制保证了TCP的可靠传输，
+但当丢包发生时，
+由于需要反馈或者超时才能进行重传，
+会显著增大无人机视频传输的时延。
 \par
-TCP-Reno是目前应用最为广泛的TCP协议之一。它有四个传输阶段：慢启动，拥塞避免，快恢复和快重传。TCP维护了两个变量，拥塞窗口大小（ cwnd）和慢启动门限（ ssthresh）。 cwnd的初始值设为最大报文段大小（ MSS）。一个TCP连接建立起来后，首先进入慢启动阶段。对于每一个
-ACK，cwnd增长一个MSS大小；因此，cwnd随着往返时延（ Round-Trip Times，RTT）进行指数增长。当cwnd超过了ssthresh，TCP发送端进入拥塞避免阶段。当发送窗口内所有的报文都被确认后，cwnd才会增长一个MSS大小，也就是说cwnd随着RTT线性增长。如果传输链路中的某个节点因为拥塞而导致了丢包，或者发送端收到3个重复ACK，或者发送端的重传定时器超时，发送端都会减小cwnd的值，进而减小发送速度，以便缓解链路的拥塞状况。
-
+TCP-Reno是目前应用最为广泛的TCP协议之一。
+它有四个传输阶段：
+慢启动，拥塞避免，快恢复和快重传。
+TCP维护了两个变量，拥塞窗口大小（ cwnd）和慢启动门限（ ssthresh）。 
+cwnd的初始值设为最大报文段大小（ MSS）。
+一个TCP连接建立起来后，
+首先进入慢启动阶段。
+对于每一个ACK，
+cwnd增长一个MSS大小；
+因此，cwnd随着往返时延（ Round-Trip Times，RTT）进行指数增长。
+当cwnd超过了ssthresh，
+TCP发送端进入拥塞避免阶段。
+当发送窗口内所有的报文都被确认后，
+cwnd才会增长一个MSS大小，
+也就是说cwnd随着RTT线性增长。
+如果传输链路中的某个节点因为拥塞而导致了丢包，
+或者发送端收到3个重复ACK，
+或者发送端的重传定时器超时，
+发送端都会减小cwnd的值，
+进而减小发送速度，
+以便缓解链路的拥塞状况。
 \par
-随着无线技术的发展和不断增长的用户需求，IP协议族已经扩展到无线网络环境下的应用中去。实际上，基于IP协议的网络有很大部分是异构网络。这意味着从一个终端用户到另一个终端用户的路径将会包含有线链路和无线链路。然而，在有线网络中我们所信赖的TCP协议在无线网络中却表现不佳。这个问题来自于有线网络和无线网络不同的链路特征，以及传统TCP协议所设计的丢包模型。其主要表现为网络吞吐率的下降、网络资源无法充分利用和对数据传输的频繁打断。
-
+TCP-Reno这套机制在诸如光纤骨干网这种有线网络环境下可以高效工作，
+然而在类似无人机工作环境的lossy信道下却由于先天设计上的劣势而表现不佳。
+传统TCP协议为了保证快速、可靠传输和链路公平性，
+设计了丢包模型，
+其前提是链路中绝大部分丢包都是因为拥塞导致。
+网络拥塞产生的原因总体上分为四种：
+缓冲区容量有限、传输链路的频带有限、节点处理能力有限和网络中某部分刚发生故障。
+在有线网络中，
+传输出错的概率极低，
+也不存在障碍物阻挡导致的链路短暂中断的可能，
+因此，有线网络中出现的丢包离不开上面所列的四种情形，
+同时理论上，对于出现的丢包，
+TCP协议也应该减小拥塞窗口，
+降低将数据发往网络的速率，
+以减轻网络拥塞状况。
+而无人机一般工作在室外空域，
+具有移动性高的特点，
+经常面临着数据链路被障碍物阻挡的情形，
+面临的是典型的大尺度衰落信道环境。
+链路丢包、错包频繁，
+丢包主要原因也不仅仅是先前谈到的四种。
+很多不可控的因素，
+如天气、障碍物、多径干扰等，
+都会导致无人机在视频传输中出现丢包。
+此时如果依然将丢包看做是链路拥塞的标志显然是不恰当的。
+无人机图传所工作的lossy信道会让标准TCP错误地启动拥塞控制机制，
+其主要表现为网络吞吐率的下降、网络资源无法充分利用和对数据传输的频繁打断。
+如果一个RTT内仅仅出现一个丢包的话，
+TCP-Reno协议引入的快速重传和快速恢复算法能够从零星的随机丢包中很快恢复过来。
+然而，噪声以及无线信道中的其他因素，
+导致经常出现突发的一连串的随机比特错误，
+也因此有很高概率在一个RTT内出现多个报文丢失的情况。
+再一次的，一个RTT内多次失败的重传会导致TCP的RTO快速增大，
+拥塞窗口乘法减小。
+标准TCP吞吐率出现了急剧下降。
+对于丢失的报文，
+TCP是依靠ACK机制来确保可靠传输，
+这一来一回又增大了传输时延。
 \par
-不像光纤骨干网，无线链路使用开放的空间作为传输介质，也因此受限于许多不可控的因素，如天气、障碍物、多径干扰等。在应用场景方面，无线网络环境下的用户多为移动终端。因此，相比有线网络，无线网络有很高的误码率。同时，受限于无线信号覆盖范围，移动的终端用户经常需要在不同的AP之间切换，这会导致在一个通信业务时段内频繁出现断开和重连的事件。在断开期间，数据报文和ACK都会丢失，导致TCP产生重传。而断开期间的重传都会失败，这些失败的重传会让TCP的重传超时时间（ Retransmission Time Out，RTO）出现指数的增长，拥塞窗口乘法减少（ Multiplicative Decrease），直接导致TCP在相当长一段时间内（  可以长达 50 RTTs）无法正常工作\textsuperscript{\cite{YE2005}}。
+可以看到，基于WIFI的无人机视频传输时延大、吞吐率不高，
+其所依赖的TCP协议要承担很大一部分责任。
+lossy信道下，丢包不仅会让TCP的吞吐率大幅下降，
+同时，丢包引起的重传也会显著增加传输时延。
+提高TCP协议应对lossy信道的能力可以大幅提高提高无人机用户航拍体验。
+针对TCP协议在lossy信道中存在的问题，
+国内外有许多学者已经做了很多有益的工作，
+其中Sundararajan等人关于编码TCP\textsuperscript{\cite{Sundararajan2009}}的工作引起了很大的关注。
+作者在TCP层和IP层之间引入一个网络编码层，
+提出了编码TCP协议（ TCP/NC )， 
+在不对现有TCP协议作出修改的前提下，
+提高TCP在lossy信道下的吞吐率。
+本文在文献\cite{Sundararajan2009}的基础上，
+设计并实现了TCP/NC协议，
+并作出改进，
+即增强TCP/NC（ Enhanced TCP/NC，E-TCP/NC ）技术。
+\section{lossy信道传输层协议研究现状}
 \par
-标准TCP，如TCP-Reno，无法很好处理这种高误码率和频繁断开连接的情况。由于所有的丢包都被视为网络拥塞的结果，无线链路的高误码率导致的随机丢包会让标准TCP错误地启动拥塞控制机制，降低发送速率。如果一个RTT内仅仅出现一个丢包的话，TCP-Reno协议引入的快速重传和快速恢复算法能够从零星的随机丢包中很快恢复过来。然而，噪声以及无线网络中的其他因素，导致经常出现突发的一连串的随机比特错误，也因此有很高概率在一个RTT内出现多个报文丢失的情况。再一次的，一个RTT内多次失败的重传会导致TCP的RTO快速增大，拥塞窗口乘法减小。可以看到，因为无法辨别链路的拥塞丢包和非拥塞丢包，标准TCP吞吐率出现了急剧下降。
-
+关于标准TCP在lossy信道中的缺点,
+很多学者做了研究\textsuperscript{\cite{Balakrishnan1997,ontcp,YE2005,tcpsatelite,OpenIssues}}。针对TCP在面对lossy信道中非拥塞丢包这一问题上的无力，
+目前解决的方法主要分为两类。
+第一类着眼于掩盖链路中出现的非拥塞丢包，
+这样发送端就只会检测到拥塞丢包。
+其背后的思想是，
+既然丢包是在局部链路发生的， 
+那么应该在局部链路里就地解决。
+TCP层不需要了解某段局部链路的情况。
+采用此种方法的协议使得整个链路看起来是一条高质量的链路，
+只不过有效带宽减小了而已。
+第二类则通过改进现有TCP协议的一些机制，
+使TCP可以辨别出拥塞丢包和非拥塞丢包。
+这样只有当出现拥塞丢包时，
+TCP才会启动相应的拥塞控制算法。
 \par
-通信网络在过去几十年得到了极大的发展。分组交换技术将语音和数据网络融合成了多媒体网络。不断涌现的无线应用，如高速多媒体服务，要求对现有的TCP协议作出改进，以适应无线网络环境下的数据传输。考虑到现有的互联网架构在TCP/IP协议族上，考虑到兼容性和成本，另建一套协议体系不现实。问题集中在如何对现有TCP协议进行改进，以适应无线网络环境下的应用。国内外有许多学者已经做了很多有益的工作，其中Sundararajan等人关于编码TCP\textsuperscript{\cite{Sundararajan2009}}的工作引起了很大的关注。作者在TCP层和IP层之间引入一个网络编码层，提出了编码TCP协议（ TCP/NC )， 在不对现有TCP协议作出修改的前提下，提高TCP在无线网络环境下的吞吐率。本文在文献\cite{Sundararajan2009}的基础上，设计并实现了TCP/NC协议，并作出改进。
-
-
-\section{无线网络中传输层协议研究现状}
+对于第一类方法来说，
+掩盖丢包意味着不需要发送端的干涉，
+非拥塞丢包问题就可以解决。
+可以在链路层或者TCP层来达到这一目的。
 \par
-关于标准TCP在无线网络中的缺点,很多学者做了研究\textsuperscript{\cite{Balakrishnan1997,ontcp,YE2005,tcpsatelite,OpenIssues}}。针对TCP在面对无线网络中随机丢包这一问题上的无力，目前解决的方法主要分为两类。第一类着眼于掩盖链路中出现的丢包，这样发送端就只会检测到拥塞丢包。其背后的思想是，既然丢包是在局部链路发生的， 那么应该在局部链路里就地解决。TCP层不需要了解某段局部链路的情况。采用此种方法的协议使得整个链路看起来是一条高质量的链路，只不过有效带宽减小了而已。第二类则通过改进现有TCP协议的一些机制，使TCP可以辨别出拥塞丢包和非拥塞丢包。这样只有当出现拥塞丢包时，TCP才会启动相应的拥塞控制算法。
+在链路层上，
+两个著名的机制就是自动请求重传（ Automatic Repeat Request，ARQ）和前向纠错码（ Forward Error Correction，FEC），
+可以在局部链路上提供可靠传输\textsuperscript{\cite{1607897,1599400,1603715}}。
 \par
-对于第一类方法来说，掩盖丢包意味着不需要发送端的干涉，非拥塞丢包问题就可以解决。可以在链路层或者TCP层来达到这一目的。
+当丢包不是很频繁，
+传播时延不重要时，
+ARQ很有效。
+只有当包重传时，
+才会耗费额外的带宽。
+然而，ARQ可能会和TCP原有的机制相冲突\textsuperscript{\cite{Balakrishnan1997}}。
+出现丢包后，
+如果链路层不提供按序的报文交付，
+从TCP层下来的新的报文陆续抵达接收端，
+会触发接收端那边产生重复ACK。
+当链路层重传这些丢失的报文时，
+这些重复ACK会抵达发送端。
+这又会让发送端的发送窗口值变小，
+而这是我们急需避免的。
+不仅如此，
+当链路层在重传报文时，
+TCP的重传定时器还可能超时。
+文献\cite{Vacirca2003On}设计了一个跨层的算法，
+通过获取TCP层的端到端的丢包率来优化链路层的重传次数。
+文献\cite{crosslayer}提出了一种TCP-aware dynamic ARQ算法。
+不需要修改TCP的状态机，
+利用TCP层采样得到的RTT值及目前为止重传报文的个数来动态调整链路层允许的最大重传次数和重传优先级。
+考虑到无人机视频传输对时延的要求比较高，
+链路层的重传机制不是很合适。
 \par
-在链路层上，两个著名的机制就是自动请求重传（ Automatic Repeat Request，ARQ）和前向纠错码（ Forward Error Correction，FEC），可以在局部链路上提供可靠传输\textsuperscript{\cite{1607897,1599400,1603715}}。
+FEC则通过发送冗余信息来重构错误的报文。
+缺点则是当链路质量较好时，
+浪费了可用带宽。
+同时，采用FEC也会耗费额外的CPU处理时间、内存，增加时延。
+对于长时延的链路来说，
+重传代价是很高的，
+采用FEC是一个不错的方法。
+文献\cite{Allman1999Enhancing}将FEC应用于卫星链路上，
+以让TCP适应卫星链路大时延、高丢包的特征。
+本质上，本文重点介绍并设计实现的TCP/NC协议也属于FEC范围。
 \par
-当丢包不是很频繁，传播时延不重要时，ARQ很有效。只有当包重传时，才会耗费额外的带宽。然而，ARQ可能会和TCP原有的机制相冲突\textsuperscript{\cite{Balakrishnan1997}}。出现丢包后，如果链路层不提供按序的报文交付，从TCP层下来的新的报文陆续抵达接收端，会触发接收端那边产生重复ACK。当链路层重传这些丢失的报文时，这些重复ACK会抵达发送端。这又会让发送端的发送窗口值变小，而这是我们急需避免的。不仅如此，当链路层在重传报文时，TCP的重传定时器还可能超时。文献\cite{Vacirca2003On}设计了一个跨层的算法，通过获取TCP层的端到端的丢包率来优化链路层的重传次数。文献\cite{crosslayer}提出了一种TCP-aware dynamic ARQ算法。不需要修改TCP的状态机，利用TCP层采样得到的RTT值及目前为止重传报文的个数来动态调整链路层允许的最大重传次数和重传优先级。
+在TCP层掩盖丢包意味着我们需要在TCP层重传报文，
+但不能让数据发送源端发现。
+处在lossy 信道的入口处的路由器部署一个TCP agent，
+它保存了每一个经过它去往lossy信道的报文。
+当它看到某个报文的ACK时，
+才会丢弃该报文。
+文献\cite{Bakre1995I}设计了Indirect-TCP协议。
+Indirect-TCP在lossy信道入口处的路由器那里终止了原始的TCP连接，
+TCP agent接管了原来连接的报文，
+然后将其送往目的站点。
+这种方法破坏了互联网端到端的语义，
+而且在TCP agent处需要保存大量的信息。
+文献\cite{Balakrishnan1995Improving}提出了Snoop 协议，
+保持了端到端的语义。
+中间代理不会终止原来的TCP连接，
+不自己构建ACK报文，
+仅仅保存了经过它的数据报文的拷贝。
+来自目的站点的重复ACK会被丢弃，
+不会发往TCP的数据发送源端。
+当agent收到三个以上重复ACK或者本地的RTO超时，
+报文会在agent处被重传。
+实际上这种处理策略和链路层的ARQ没有本质不同，
+增大传输时延，
+而且可能会和Source端的TCP原有机制冲突，
+不适合无人机视频传输的应用场景。
 \par
-FEC则通过发送冗余信息来重构错误的报文。缺点这是当链路质量较好时，浪费了可用带宽。同时，采用FEC也会耗费额外的CPU处理时间、内存，增加时延。对于长时延的链路来说，重传代价是很高的，采用FEC是一个不错的方法。文献\cite{Allman1999Enhancing}将FEC应用于卫星链路上，以让TCP适应卫星链路大时延、高丢包的特征。
-\par
-在TCP层掩盖丢包意味着我们需要在TCP层重传报文，但不能让数据发送源端发现。处在lossy 信道的入口处的路由器部署一个TCP agent，它保存了每一个经过它去往lossy信道的报文。当它看到某个报文的ACK时，才会丢弃该报文。文献\cite{Bakre1995I}设计了Indirect-TCP协议。Indirect-TCP在lossy信道入口处的路由器那里终止了原始的TCP连接，TCP agent接管了原来连接的报文，然后将其送往目的站点。这种方法破坏了互联网端到端的语义，而且在TCP agent处需要保存大量的信息。文献\cite{Balakrishnan1995Improving}提出了Snoop 协议，保持了端到端的语义。中间代理不会终止原来的TCP连接，不自己构建ACK报文，仅仅保存了经过它的数据报文的拷贝。来自目的站点的重复ACK会被丢弃，不会发往TCP的数据发送源端。当agent收到三个以上重复ACK或者本地的RTO超时，报文会在agent处被重传。实际上这种处理策略和链路层的ARQ没有本质不同，可能会和Source端的TCP原有机制冲突。
-\par
-第二类方法致力于让TCP层分辨拥塞丢包和非拥塞丢包。文献\cite{buchholcz2003explicit}提出了Explicit Loss Notification（ ELN）。ELN的基本思想是接收端的MAC层可以检测出错包。传统的MAC层在收到错包的时候会直接将其丢弃，在超过一定时间后，TCP发送端会认为由于拥塞，这个包丢失了。如果能够告知TCP的发送端关于错包的信息，TCP就可以辨别拥塞丢包和非拥塞丢包。接收端的MAC层在收到错包时，会将这一信息告知上面的TCP层，然后TCP层会向对方回送一个报文，告知某个包传输出错。ELN的优点是只需要在通信的双方作出修改，而无需修改网络中的内部节点。其优点同样是缺点，我们需要修改现有的TCP协议和MAC协议，与现有体系兼容性不好。
-TCP协议的一个版本TCP-Vegas\textsuperscript{\cite{brakmo1995tcp}}则直接改进了原有的拥塞控制协议，直接让拥塞检测和丢包解耦。换句话说，TCP-Vegas判断拥塞的方法和丢包没有关系。在TCP-Vegas协议中，使用发送窗口值和采样得到的RTT值来计算网络中的报文。然后根据最近一个RTT的发送速度来判断网络中的报文是否过多，进而决定是否减小拥塞窗口。TCP-Vegas并没有得到广泛应用是因为其在与TCP-Reno共存时的劣势。当网络中的所有主机全部采用TCP-Vegas时，整体的效果明显优于TCP-Reno。但当网络中TCP-Vegas与TCP-Reno共存时，TCP-Vegas没有办法和TCP-Reno公平竞争带宽。产生这种现象的原因是TCP-Reno使用了较具侵略性的拥塞控制算法，其传送端会不断地将数据送到网络上，直到拥塞发生。相比之下，TCP-Vegas的发送端在网络开始拥塞时就将传送速率降低，以避免拥塞发生。
+第二类方法致力于让TCP层分辨拥塞丢包和非拥塞丢包。
+文献\cite{buchholcz2003explicit}提出了Explicit Loss Notification（ ELN）。
+ELN的基本思想是接收端的MAC层可以检测出错包。
+传统的MAC层在收到错包的时候会直接将其丢弃，
+在超过一定时间后，
+TCP发送端会认为由于拥塞，
+这个包丢失了。
+如果能够告知TCP的发送端关于错包的信息，
+TCP就可以辨别拥塞丢包和非拥塞丢包。
+接收端的MAC层在收到错包时，
+会将这一信息告知上面的TCP层，
+然后TCP层会向对方回送一个报文，
+告知某个包传输出错。
+ELN虽然可以让TCP层分辨拥塞丢包和非拥塞丢包，
+让其不启动拥塞控制算法，
+但是其仍然依赖于重传，
+会显著增大时延。
+ELN也仅仅处理错包，无法处理无人机应用场景下的障碍物遮挡导致的连串丢包。
+%TCP协议的一个版本TCP-Vegas\textsuperscript{\cite{brakmo1995tcp}}则直接改进了原有的拥塞控制协议，
+%直接让拥塞检测和丢包解耦。
+%换句话说，
+%TCP-Vegas判断拥塞的方法和丢包没有关系。
+%在TCP-Vegas协议中，
+%使用发送窗口值和采样得到的RTT值来计算网络中的报文。
+%然后根据最近一个RTT的发送速度来判断网络中的报文是否过多，
+%进而决定是否减小拥塞窗口。
+%TCP-Vegas并没有得到广泛应用是因为其在与TCP-Reno共存时的劣势。当网络中的所有主机全部采用TCP-Vegas时，整体的效果明显优于TCP-Reno。但当网络中TCP-Vegas与TCP-Reno共存时，TCP-Vegas没有办法和TCP-Reno公平竞争带宽。产生这种现象的原因是TCP-Reno使用了较具侵略性的拥塞控制算法，其传送端会不断地将数据送到网络上，直到拥塞发生。相比之下，TCP-Vegas的发送端在网络开始拥塞时就将传送速率降低，以避免拥塞发生。
 \par
 RFC3168所引入的Explicit Congestion Notification（ ECN)机制\textsuperscript{\cite{ramakrishnan2001rfc}}是另一种显示告知TCP链路发生了拥塞的方法。在IP首部的TOS字段的第7和8比特被重新定义为ECN字段。网络中的路由器通过ECN字段来指示网络出现拥塞。ECN机制是后期加入标准的，需要网络中的路由器支持才行。
 \par
 网络编码思想创于千年更替之际，由Ahlswede、蔡和杨在其开创性论文\cite{Ahlswede2000}中提出后迅速吸引了世界各地的研究者和实践者。
-网络编码（ Network Coding）的出现对于传统TCP协议在无线网络环境下的改进给出了新的方向。文献\cite{chou2003practical}首次提出了将网络编码应用于真实网络的方法。通过在每个报文的头部添加相关信息，达到了去中心化的目标，形成了一个实质上的分布式系统，可以抵抗丢包，同时也能适应网络拓扑的变化。文献\cite{ontheflycoding}提出了一种可靠传输的机制，主要针对大时延及反馈链路信道质量很差的网络。如果网络时延很大，重传报文的代价就很大；如果反馈信道质量很差，经常出现丢包，TCP的发送端收不到ACK，误以为数据报文出现丢失，减小传输速率。在发送端对数据报文进行线性冗余编码，编码窗口根据收到的ACK来动态变化，作者采用了一个隐式ACK的策略，在降低对ACK的依赖的情况下，实现了高速的可靠传输。Sundararajan等人在文献\cite{4595268}中首次基于网络编码提出了“acknowledge degrees of freedom”的概念，并将其应用到链路层ARQ上面，减小了网络编码应用于多播协议上后编码端的编码队列长度。期望队列长度由$\Omega \left( {\frac{1}{{{{\left( {1{\rm{ - }}\rho } \right)}^2}}}} \right)$变为
-${\rm O}\left( {\frac{1}{{1{\rm{ - }}\rho }}} \right)$，其中$\rho$为丢包率。再次基础上，作者又于文献\cite{Sundararajan2009}中将Network Coding（ NC） 应用于TCP/IP协议栈，提出了TCP/NC协议，增强传统TCP协议在无线网络的吞吐率。通过在TCP层和IP层之间增加一个网络编码层，TCP/NC可以抵抗lossy网络的随机丢包。此篇文章引起了极大关注，原因在于NC编码层可以很友好地和TCP层共存，不需要对现有TCP/IP协议栈做任何修改，适合大规模地部署。本文的工作也是基于文献\cite{Sundararajan2009,Sundararajan2011}设计、实现TCP/NC协议，并对TCP/NC协议进行了改进，将其移植入嵌入式开发板中，在无人机等真实丢包网络中与TCP-Reno进行性能对比。
+网络编码（ Network Coding）的出现对于传统TCP协议在lossy信道下的改进给出了新的方向。文献\cite{chou2003practical}首次提出了将网络编码应用于真实网络的方法。通过在每个报文的头部添加相关信息，达到了去中心化的目标，形成了一个实质上的分布式系统，可以抵抗丢包，同时也能适应网络拓扑的变化。文献\cite{ontheflycoding}提出了一种可靠传输的机制，主要针对大时延及反馈链路信道质量很差的网络。如果网络时延很大，重传报文的代价就很大；如果反馈信道质量很差，经常出现丢包，TCP的发送端收不到ACK，误以为数据报文出现丢失，减小传输速率。在发送端对数据报文进行线性冗余编码，编码窗口根据收到的ACK来动态变化，作者采用了一个隐式ACK的策略，在降低对ACK的依赖的情况下，实现了高速的可靠传输。
+\par
+Sundararajan等人在文献\cite{4595268}中首次基于网络编码提出了“acknowledge degrees of freedom”的概念，并将其应用到链路层ARQ上面，减小了网络编码应用于多播协议上后编码端的编码队列长度。期望队列长度由$\Omega \left( {\frac{1}{{{{\left( {1{\rm{ - }}\rho } \right)}^2}}}} \right)$变为
+${\rm O}\left( {\frac{1}{{1{\rm{ - }}\rho }}} \right)$，其中$\rho$为丢包率。在此基础上，作者又于文献\cite{Sundararajan2009}中将Network Coding（ NC） 应用于TCP/IP协议栈，提出了TCP/NC协议，增强传统TCP协议在lossy信道下的吞吐率。通过在TCP层和IP层之间增加一个网络编码层，TCP/NC可以抵抗lossy网络的随机丢包。此篇文章引起了极大关注，原因在于NC编码层可以很友好地和TCP层共存，不需要对现有TCP/IP协议栈做任何修改，适合大规模地部署。本文的工作也是基于文献\cite{Sundararajan2009,Sundararajan2011}设计、实现TCP/NC协议，并对TCP/NC协议进行了改进，将其移植入嵌入式开发板中，在无人机视频传输应用场景下验证分析其性能。
 
 \section{论文主要工作及内容安排}
-本论文以TCP/NC\textsuperscript{\cite{Sundararajan2009}}为基础,设计实现TCP/NC协议，并将其移植入嵌入式板子中。搭建无人机测试环境，在真实丢包环境中测试TCP/NC的性能，分析影响其性能的关键因素。针对丢包率变化的网络，设计自适应冗余度算法。针对解码时延过大、编码队列长度过大和突发丢包，设计编码层重传算法。测试分析这两种改进的优劣，给出各自的应用场景。
+本文以TCP/NC\textsuperscript{\cite{Sundararajan2009}}为基础,设计实现TCP/NC协议，将其移植入嵌入式板子中，并对其作出若干改进，即Enhanced TCP/NC（ E-TCP/NC）。搭建无人机视频传输实验平台，验证分析E-TCP/NC对基于WIFI机制下的无人机航拍性能的提升。
 \par
 本论文的章节安排如下：
 \par
-第一章对标准TCP协议在无线网络中存在的问题进行了分析，重点分析了其拥塞控制机制和无线链路的特征之间的对立。回顾了目前一些学者在改进TCP协议在无线网络环境下的性能的一些工作，总结了各自的优缺点。最后对本论文的主要工作和内容安排做了介绍。
+第一章介绍无人机视频传输的广泛应用及其现有的技术方案，分析各自的优缺点。对WIFI机制下的无人机视频传输所依赖的TCP协议进行了粗略的描述。分析基于TCP协议的无人机视频传输所面临的问题，指出问题核心乃是TCP协议本身的丢包模型设计。重点指出了TCP协议的拥塞控制在lossy信道下的劣势及对无人机视频传输的影响。阐述了改进TCP协议的必要性，对国内外学者在改进lossy信道环境下TCP性能的研究现状进行分析和比较。最后介绍了本论文的工作及论文的相关安排。
 \par
 第二章首先介绍了网络编码的相关理论，对其图论模型做了描述，并在此基础上阐述了线性网络编码的相关知识。然后介绍了目前在网络编码领域应用最为广泛的Batch Coding编码机制，分析了其优缺点，引出了流水线编码机制，给出了编解码算法。最后介绍了TCP/NC协议的原理架构，重点提及了其引入的几个新概念，如“seen packet”，分析其是如何抵抗网络丢包的。第二章主要是为后面的TCP/NC协议的实现和改进打下基础。 
 \par
-第三章对
+第三章主要讲TCP/NC协议的实现技术细节。阐述了如何对数据包进行编码，给出了在Raspberry Pi上实现TCP/NC的技术方案。对TCP/NC协议实现过程中的关键环节进行了详细描述，包括NC头部设计、NC编码缓存、NC解码缓存和NC层接收窗口的计算。最后在模拟无人机视频传输丢包环境中，测试TCP/NC的实际性能。
 \par
 第四章对
 
