按老陈的要求无人机部分添加完毕了。。。||

--- a/content/chap01.tex
+++ b/content/chap01.tex
@@ -6,12 +6,12 @@
 \par
 本章首先介绍无人机视频传输的广泛应用及其现有的技术方案，
 分析各自的优缺点。
-对WIFI机制下的无人机视频传输所依赖的TCP协议进行了粗略的描述。
+对TCP协议进行了简单的描述，
 分析基于TCP协议的无人机视频传输所面临的问题，
 指出问题核心乃是TCP协议本身的丢包模型设计。
-重点指出了TCP协议的拥塞控制在lossy信道下的劣势及对无人机视频传输的影响。
+重点指出了TCP协议的拥塞控制在有损信道下的劣势及对无人机视频传输的影响。
 阐述了改进TCP协议的必要性，
-对国内外学者在改进lossy信道环境下TCP性能的研究现状进行分析和比较。
+对国内外学者在改进有损信道环境下TCP性能的研究现状进行分析和比较。
 最后介绍了本论文的工作及论文的相关安排。
 \section{论文的研究背景和意义}
 \par
@@ -25,19 +25,20 @@
 第一种是类似DJI Lightbridge\footnote{关于DJI Lightbridge，参见\url{http://www.dji.com/cn/dji-lightbridge}}的专有数据链技术，
 包含数字图传和模拟图传，
 其优点是传输时延小和单向广播；
-第二种是基于现有TCP/IP网络协议体系下的视频传输技术，如WIFI图传。
+第二种是基于现有TCP/IP网络协议体系下的视频传输技术，
+如RTMP协议、Http Live Streaming（ HLS ）协议和Http-Flv协议，
 其缺点是传输时延比较大，
 容易受到无线链路中的各种干扰。
-WIFI图传虽然性能一般，
-但是价格低廉，
-无需专门的操控设备，
-在低价民用市场仍然具有一定市场份额。
+而且由于架构于TCP/IP体系上，必然受限于TCP协议自身的缺点。
+尽管如此，
+考虑到现今整个因特网体系架构的基石是TCP/IP协议栈，
+以及未来5G时代万物互联的前景，
+基于TCP/IP的无人机视频传输技术仍然具有前景。
 \par
-WIFI机制下，
+在基于TCP协议的无人机视频传输中，
 每个数据包必须完整无误传输，
 一旦数据错误或有丢失，
-就需要重新发送，
-一般都是基于TCP协议来进行图传。
+就需要重新发送。
 在TCP协议中，
 每个TCP报文都有一个序号，
 只有接收端按序收到正确的报文，
@@ -72,7 +73,7 @@ cwnd才会增长一个MSS大小，
 以便缓解链路的拥塞状况。
 \par
 TCP-Reno这套机制在诸如光纤骨干网这种有线网络环境下可以高效工作，
-然而在类似无人机工作环境的lossy信道下却由于先天设计上的劣势而表现不佳。
+然而在类似无人机工作环境的有损信道下却由于先天设计上的劣势而表现不佳。
 传统TCP协议为了保证快速、可靠传输和链路公平性，
 设计了丢包模型，
 其前提是链路中绝大部分丢包都是因为拥塞导致。
@@ -82,8 +83,8 @@ TCP-Reno这套机制在诸如光纤骨干网这种有线网络环境下可以高
 传输出错的概率极低，
 也不存在障碍物阻挡导致的链路短暂中断的可能，
 因此，有线网络中出现的丢包离不开上面所列的四种情形，
-同时理论上，对于出现的丢包，
-TCP协议也应该减小拥塞窗口，
+对于出现的丢包，
+TCP协议就应该减小拥塞窗口，
 降低将数据发往网络的速率，
 以减轻网络拥塞状况。
 而无人机一般工作在室外空域，
@@ -96,7 +97,7 @@ TCP协议也应该减小拥塞窗口，
 如天气、障碍物、多径干扰等，
 都会导致无人机在视频传输中出现丢包。
 此时如果依然将丢包看做是链路拥塞的标志显然是不恰当的。
-无人机图传所工作的lossy信道会让标准TCP错误地启动拥塞控制机制，
+无人机图传所工作的有损信道会让标准TCP错误地启动拥塞控制机制，
 其主要表现为网络吞吐率的下降、网络资源无法充分利用和对数据传输的频繁打断。
 如果一个RTT内仅仅出现一个丢包的话，
 TCP-Reno协议引入的快速重传和快速恢复算法能够从零星的随机丢包中很快恢复过来。
@@ -110,26 +111,16 @@ TCP-Reno协议引入的快速重传和快速恢复算法能够从零星的随机
 TCP是依靠ACK机制来确保可靠传输，
 这一来一回又增大了传输时延。
 \par
-可以看到，基于WIFI的无人机视频传输时延大、吞吐率不高，
+可以看到，基于TCP的无人机视频传输时延大、吞吐率不高，
 其所依赖的TCP协议要承担很大一部分责任。
-lossy信道下，丢包不仅会让TCP的吞吐率大幅下降，
+有损信道下，丢包不仅会让TCP的吞吐率大幅下降，
 同时，丢包引起的重传也会显著增加传输时延。
-提高TCP协议应对lossy信道的能力可以大幅提高提高无人机用户航拍体验。
-针对TCP协议在lossy信道中存在的问题，
-国内外有许多学者已经做了很多有益的工作，
-其中Sundararajan等人关于编码TCP\textsuperscript{\cite{Sundararajan2009}}的工作引起了很大的关注。
-作者在TCP层和IP层之间引入一个网络编码层，
-提出了编码TCP协议（ TCP/NC )， 
-在不对现有TCP协议作出修改的前提下，
-提高TCP在lossy信道下的吞吐率。
-本文在文献\cite{Sundararajan2009}的基础上，
-设计并实现了TCP/NC协议，
-并作出改进，
-即增强TCP/NC（ Enhanced TCP/NC，E-TCP/NC ）技术。
-\section{lossy信道传输层协议研究现状}
+提高TCP协议应对有损信道的能力可以大幅提高提高无人机用户航拍体验。
+
+\section{有损信道传输层协议研究现状}
 \par
-关于标准TCP在lossy信道中的缺点,
-很多学者做了研究\textsuperscript{\cite{Balakrishnan1997,ontcp,YE2005,tcpsatelite,OpenIssues}}。针对TCP在面对lossy信道中非拥塞丢包这一问题上的无力，
+关于标准TCP在有损信道中的缺点,
+很多学者做了研究\textsuperscript{\cite{Balakrishnan1997,ontcp,YE2005,tcpsatelite,OpenIssues}}。针对TCP在面对有损信道中非拥塞丢包这一问题上的无力，
 目前解决的方法主要分为两类。
 第一类着眼于掩盖链路中出现的非拥塞丢包，
 这样发送端就只会检测到拥塞丢包。
@@ -191,12 +182,12 @@ FEC则通过发送冗余信息来重构错误的报文。
 \par
 在TCP层掩盖丢包意味着我们需要在TCP层重传报文，
 但不能让数据发送源端发现。
-处在lossy 信道的入口处的路由器部署一个TCP agent，
-它保存了每一个经过它去往lossy信道的报文。
+处在有损 信道的入口处的路由器部署一个TCP agent，
+它保存了每一个经过它去往有损信道的报文。
 当它看到某个报文的ACK时，
 才会丢弃该报文。
 文献\cite{Bakre1995I}设计了Indirect-TCP协议。
-Indirect-TCP在lossy信道入口处的路由器那里终止了原始的TCP连接，
+Indirect-TCP在有损信道入口处的路由器那里终止了原始的TCP连接，
 TCP agent接管了原来连接的报文，
 然后将其送往目的站点。
 这种方法破坏了互联网端到端的语义，
@@ -211,7 +202,7 @@ TCP agent接管了原来连接的报文，
 当agent收到三个以上重复ACK或者本地的RTO超时，
 报文会在agent处被重传。
 实际上这种处理策略和链路层的ARQ没有本质不同，
-增大传输时延，
+增大了传输时延，
 而且可能会和Source端的TCP原有机制冲突，
 不适合无人机视频传输的应用场景。
 \par
@@ -233,30 +224,104 @@ ELN虽然可以让TCP层分辨拥塞丢包和非拥塞丢包，
 但是其仍然依赖于重传，
 会显著增大时延。
 ELN也仅仅处理错包，无法处理无人机应用场景下的障碍物遮挡导致的连串丢包。
-%TCP协议的一个版本TCP-Vegas\textsuperscript{\cite{brakmo1995tcp}}则直接改进了原有的拥塞控制协议，
-%直接让拥塞检测和丢包解耦。
-%换句话说，
-%TCP-Vegas判断拥塞的方法和丢包没有关系。
-%在TCP-Vegas协议中，
-%使用发送窗口值和采样得到的RTT值来计算网络中的报文。
-%然后根据最近一个RTT的发送速度来判断网络中的报文是否过多，
-%进而决定是否减小拥塞窗口。
-%TCP-Vegas并没有得到广泛应用是因为其在与TCP-Reno共存时的劣势。当网络中的所有主机全部采用TCP-Vegas时，整体的效果明显优于TCP-Reno。但当网络中TCP-Vegas与TCP-Reno共存时，TCP-Vegas没有办法和TCP-Reno公平竞争带宽。产生这种现象的原因是TCP-Reno使用了较具侵略性的拥塞控制算法，其传送端会不断地将数据送到网络上，直到拥塞发生。相比之下，TCP-Vegas的发送端在网络开始拥塞时就将传送速率降低，以避免拥塞发生。
 \par
-RFC3168所引入的Explicit Congestion Notification（ ECN)机制\textsuperscript{\cite{ramakrishnan2001rfc}}是另一种显示告知TCP链路发生了拥塞的方法。在IP首部的TOS字段的第7和8比特被重新定义为ECN字段。网络中的路由器通过ECN字段来指示网络出现拥塞。ECN机制是后期加入标准的，需要网络中的路由器支持才行。
+TCP协议的一个版本TCP-Vegas\textsuperscript{\cite{brakmo1995tcp}}则直接改进了原有的拥塞控制协议，
+让拥塞检测和丢包解耦。
+换句话说，
+TCP-Vegas判断拥塞的方法和丢包没有关系。
+在TCP-Vegas协议中，
+使用发送窗口值和采样得到的RTT值来估算网络中残留的报文。
+然后根据最近一个RTT的发送速度来判断网络中的报文是否过多，
+进而决定是否减小拥塞窗口。
+TCP-Vegas并没有得到广泛应用是因为其在与TCP-Reno共存时的劣势。
+当网络中的所有主机全部采用TCP-Vegas时，
+整体的效果明显优于TCP-Reno。
+但当网络中TCP-Vegas与TCP-Reno共存时，
+TCP-Vegas没有办法和TCP-Reno公平竞争带宽。
+产生这种现象的原因是TCP-Reno使用了较具侵略性的拥塞控制算法，
+其传送端会不断地将数据送到网络上，
+直到拥塞发生。
+相比之下，
+TCP-Vegas的发送端在网络开始拥塞时就将传送速率降低，
+以避免拥塞发生。
+对于无人机视频传输应用来说，
+TCP-Vegas与TCP-Reno竞争时的无力是一种不可忽略的劣势。
+另外，其同样无法处理因丢包引起的重传导致的时延过大问题。
 \par
-网络编码思想创于千年更替之际，由Ahlswede、蔡和杨在其开创性论文\cite{Ahlswede2000}中提出后迅速吸引了世界各地的研究者和实践者。
-网络编码（ Network Coding）的出现对于传统TCP协议在lossy信道下的改进给出了新的方向。文献\cite{chou2003practical}首次提出了将网络编码应用于真实网络的方法。通过在每个报文的头部添加相关信息，达到了去中心化的目标，形成了一个实质上的分布式系统，可以抵抗丢包，同时也能适应网络拓扑的变化。文献\cite{ontheflycoding}提出了一种可靠传输的机制，主要针对大时延及反馈链路信道质量很差的网络。如果网络时延很大，重传报文的代价就很大；如果反馈信道质量很差，经常出现丢包，TCP的发送端收不到ACK，误以为数据报文出现丢失，减小传输速率。在发送端对数据报文进行线性冗余编码，编码窗口根据收到的ACK来动态变化，作者采用了一个隐式ACK的策略，在降低对ACK的依赖的情况下，实现了高速的可靠传输。
+RFC3168所引入的Explicit Congestion Notification（ ECN)机制\textsuperscript{\cite{ramakrishnan2001rfc}}是另一种显示告知TCP链路发生了拥塞的方法。
+在IP首部的TOS字段的第7和8比特被重新定义为ECN字段。
+网络中的节点通过ECN字段来指示网络出现拥塞。
+与前面谈到一样，
+对于在无人机环境中经常出现的连串丢包，
+ECN机制无法处理连串丢包引起的重传导致的传输时延过大问题。
+而且并不是所有网络节点都支持ECN机制。
 \par
-Sundararajan等人在文献\cite{4595268}中首次基于网络编码提出了“acknowledge degrees of freedom”的概念，并将其应用到链路层ARQ上面，减小了网络编码应用于多播协议上后编码端的编码队列长度。期望队列长度由$\Omega \left( {\frac{1}{{{{\left( {1{\rm{ - }}\rho } \right)}^2}}}} \right)$变为
-${\rm O}\left( {\frac{1}{{1{\rm{ - }}\rho }}} \right)$，其中$\rho$为丢包率。在此基础上，作者又于文献\cite{Sundararajan2009}中将Network Coding（ NC） 应用于TCP/IP协议栈，提出了TCP/NC协议，增强传统TCP协议在lossy信道下的吞吐率。通过在TCP层和IP层之间增加一个网络编码层，TCP/NC可以抵抗lossy网络的随机丢包。此篇文章引起了极大关注，原因在于NC编码层可以很友好地和TCP层共存，不需要对现有TCP/IP协议栈做任何修改，适合大规模地部署。本文的工作也是基于文献\cite{Sundararajan2009,Sundararajan2011}设计、实现TCP/NC协议，并对TCP/NC协议进行了改进，将其移植入嵌入式开发板中，在无人机视频传输应用场景下验证分析其性能。
+网络编码思想创于千年更替之际，
+由Ahlswede、蔡和杨在其开创性论文\cite{Ahlswede2000}中提出后迅速吸引了世界各地的研究者和实践者。
+网络编码（ Network Coding）的出现对于传统TCP协议在有损信道下的改进给出了新的方向。
+文献\cite{chou2003practical}首次提出了将网络编码应用于真实网络的方法。
+通过在每个报文的头部添加相关信息，
+达到了去中心化的目标，
+形成了一个实质上的分布式系统，
+可以抵抗丢包，
+同时也能适应网络拓扑的变化。
+文献\cite{ontheflycoding}提出了一种可靠传输的机制，
+主要针对大时延及反馈链路信道质量很差的网络。
+如果网络时延很大，
+重传报文的代价就很大；
+如果反馈信道质量很差，
+经常出现丢包，
+TCP的发送端收不到ACK，
+误以为数据报文出现丢失，
+减小传输速率。
+在发送端对数据报文进行线性冗余编码，
+编码窗口根据收到的ACK来动态变化，
+作者采用了一个隐式ACK的策略，
+在降低对ACK的依赖的情况下，
+实现了高速的可靠传输。
+\par
+Sundararajan等人在文献\cite{4595268}中首次基于网络编码提出了“acknowledge degrees of freedom”的概念，
+并将其应用到链路层ARQ上面，
+减小了网络编码应用于多播协议上后编码端的编码队列长度。
+期望队列长度由$\Omega \left( {\frac{1}{{{{\left( {1{\rm{ - }}\rho } \right)}^2}}}} \right)$变为
+${\rm O}\left( {\frac{1}{{1{\rm{ - }}\rho }}} \right)$，
+其中$\rho$为丢包率。
+在此基础上，
+作者又于文献\cite{Sundararajan2009}中将Network Coding（ NC） 应用于TCP/IP协议栈，
+提出了TCP/NC协议，
+增强传统TCP协议在有损信道下的吞吐率。
+通过在TCP层和IP层之间增加一个网络编码层，
+TCP/NC可以抵抗有损网络的随机丢包。
+此篇文章引起了极大关注，
+原因在于NC编码层可以很友好地和TCP层共存，
+不需要对现有TCP/IP协议栈做任何修改，
+适合大规模地部署。
+本文的工作也是基于文献\cite{Sundararajan2009,Sundararajan2011}设计、实现TCP/NC协议，
+并对TCP/NC协议进行了改进，即增强TCP/NC技术（ Enchanted TCP/NC，E-TCP/NC）。
+将E-TCP/NC部署于Raspberry Pi中，
+验证其对无人机视频传输性能的提升。
 
 \section{论文主要工作及内容安排}
-本文以TCP/NC\textsuperscript{\cite{Sundararajan2009}}为基础,设计实现TCP/NC协议，将其移植入嵌入式板子中，并对其作出若干改进，即Enhanced TCP/NC（ E-TCP/NC）。搭建无人机视频传输实验平台，验证分析E-TCP/NC对基于WIFI机制下的无人机航拍性能的提升。
+针对基于TCP协议的无人机视频传输所面临的问题，
+本文以文献\cite{Sundararajan2009}为基础,
+设计实现TCP/NC协议，
+将其移植入嵌入式板子中，
+并对其作出若干改进，
+即Enhanced TCP/NC（ E-TCP/NC）。
+搭建无人机视频传输实验平台，
+验证分析E-TCP/NC对于无人机视频传输性能的提升。
 \par
 本论文的章节安排如下：
 \par
-第一章介绍无人机视频传输的广泛应用及其现有的技术方案，分析各自的优缺点。对WIFI机制下的无人机视频传输所依赖的TCP协议进行了粗略的描述。分析基于TCP协议的无人机视频传输所面临的问题，指出问题核心乃是TCP协议本身的丢包模型设计。重点指出了TCP协议的拥塞控制在lossy信道下的劣势及对无人机视频传输的影响。阐述了改进TCP协议的必要性，对国内外学者在改进lossy信道环境下TCP性能的研究现状进行分析和比较。最后介绍了本论文的工作及论文的相关安排。
+第一章首先介绍无人机视频传输的广泛应用及其现有的技术方案，
+分析各自的优缺点。
+对TCP协议进行了简单的描述，
+分析基于TCP协议的无人机视频传输所面临的问题，
+指出问题核心乃是TCP协议本身的丢包模型设计。
+重点指出了TCP协议的拥塞控制在有损信道下的劣势及对无人机视频传输的影响。
+阐述了改进TCP协议的必要性，
+对国内外学者在改进有损信道环境下TCP性能的研究现状进行分析和比较。
+最后介绍了本论文的工作及论文的相关安排。
 \par
 第二章首先介绍了网络编码的相关理论，对其图论模型做了描述，并在此基础上阐述了线性网络编码的相关知识。然后介绍了目前在网络编码领域应用最为广泛的Batch Coding编码机制，分析了其优缺点，引出了流水线编码机制，给出了编解码算法。最后介绍了TCP/NC协议的原理架构，重点提及了其引入的几个新概念，如“seen packet”，分析其是如何抵抗网络丢包的。第二章主要是为后面的TCP/NC协议的实现和改进打下基础。 
 \par
