--- a/content/chap04.tex
+++ b/content/chap04.tex
@@ -169,10 +169,12 @@ R_{new}=a*\frac{1}{1-\rho}+b*R_{old},0 \le a,b \le 1,a+b=1
 \end{equation}
 \par
 发送端和接收端同时保持有相同的编码系数码本，接收端通过提取报文的\emph{Pid}字段即可知道编码包的编码系数。
-\section{真实网络环境测试}
-\subsection{无人机lossy信道环境搭建}
-为了测试增强传输协议在无人机视频传输中的作用，本文搭建了无人机测试平台。以
-\subsection{iperf测试结果}
+\section{无人机真实网络环境测试}
+\subsection{无人机实验平台搭建}
+本文搭建真实无人机实验平台，
+以验证E-TCP/NC对无人机视频传输性能的提升。
+采用Pixhawk开源飞控和“EX700天际”机架搭建的无人机平台如图。
+\subsection{天地iperf测试结果}
 \subsection{E-TCP/NC在无人机视频传输实测效果}
 \subsection{性能分析}
 \section{本章小结}
