--- a/preface/cabstract.tex
+++ b/preface/cabstract.tex
@@ -13,6 +13,11 @@
 	因此，基于传输层协议（ TCP ） 的无人机视频传输面临着吞吐率受限、时延较大的问题。
 	这一问题很大程度上又是因为TCP协议本身的设计导致的。
 	\par
+	TCP协议中，接收端通过反馈ACK来告诉发送端某个报文的丢失，
+	然后发送端据此重传相应的报文。
+	对于无人机视频传输等实时性要求很高的应用来说，
+	丢包反馈重传耗时太长。
+	不仅如此，
 	TCP将丢包看做是链路出现拥塞的标志，
 	然后启动相应的拥塞控制算法，
 	降低传输速率。
@@ -27,7 +32,7 @@
 	降低数据发送速率，
 	将导致TCP无法充分利用可用带宽，
 	减小无人机视频传输的速率，
-	提高传输时延。
+	增大传输时延。
 	有必要改进标准TCP协议以提高基于TCP协议的无人机视频传输的性能。
 	网络编码的出现对于解决这一问题给出了一个思路。
 	通过在发送端冗余编码，
@@ -36,8 +41,8 @@
 	降低时延。
 	\par
 	本文分析了基于TCP协议的无人机视频传输所面临的问题，
-	并指出问题核心是TCP协议在面对lossy信道时的低效。
-	对近些年来改善lossy信道中TCP性能的相关工作进行了梳理。
+	并指出问题核心是TCP协议在面对有损信道时的低效。
+	对近些年来改善有损信道中TCP性能的相关工作进行了梳理。
 	介绍了网络编码原理，
 	尤其是随机线性网络编码。
 	对于batch-coding和pipeline-coding进行了比较，
