--- a/preface/eabstract.tex
+++ b/preface/eabstract.tex
@@ -5,9 +5,6 @@
 % 英文摘要输入区
 \eabstract
 {
-Here is for you to write the English abstract.
-
-
-
+	
 }
-{Network Coding; Transport Protocol; Retransmission ; Adaptive Redundancy; Packet Loss}	% 英文关键词输入区，关键词之间用“; ”分开，不超过五个
+{UAV Video Transmission；Transport Protocol；Network Coding;  Retransmission ; Adaptive Redundancy; Packet Loss}	% 英文关键词输入区，关键词之间用“; ”分开，不超过五个
